--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -5,8 +5,7 @@
 #
 #  Global settings ...
 jfreereport.name=jfreereport
-jfreereport.version=0.8.7
-jcommon.version=1.0.1
+jfreereport.version=0.9.0-pre1
 
 #
 # This defines the compiler settings. Optimizing would remove
@@ -19,6 +18,7 @@ build.deprecation=true
 #
 # Make sure that JDK 1.2 compatible class files are generated
 build.target=1.2
+build.source=1.2
 
 #
 # All path settings are relative to the project root directory
@@ -38,7 +38,11 @@ manifest-lib-prefix=lib/
 #  Used libraries ...
 
 # Used by: core libraries
-jcommon-jar-file=jcommon-${jcommon.version}.jar
+jcommon-jar-file=jcommon-1.0.3.jar
+jcommon-serializer-jar-file=jcommon-serializer-0.1.0.jar
+libfonts-jar-file=liblayout-0.1.0.jar
+liblayout-jar-file=libfonts-0.1.5.jar
+libloader-jar-file=libloader-0.1.0.jar
 pixie-jar-file=pixie-0.8.4.jar
 
 # Used by: module-misc-beanshell
@@ -49,66 +53,12 @@ bsf-jar-file=bsf-2.3.0.jar
 
 # Used by: module-parser
 jaxp-jar-file=gnujaxp.jar
-jcommon-xml-jar-file=jcommon-xml-${jcommon.version}.jar
-
-# Used by: module-output-pdf
-#          module-output-table-rtf
-#          module-output-support-itext
-itext-jar-file=itext-1.3.6.jar
-libfonts-jar-file=libfonts-0.1.4.jar
-
-# Used by: module-output-table-xml
-jakarta-poi-jar-file=poi-3.0-alpha1-20050704.jar
 
 ##############################################################
 #
 # Generated files ...
-jfreereport-all-jar-file=${targetdir}${jfreereport.name}-${jfreereport.version}.jar
+jfreereport-jar-file=${targetdir}${jfreereport.name}-${jfreereport.version}.jar
 jfreereport-demo-jar-file=${targetdir}${jfreereport.name}-demo-${jfreereport.version}.jar
 jfreereport-bundle-jar-file=${targetdir}${jfreereport.name}-${jfreereport.version}-bundle.jar
 
-core-jar-file=${targetdir}${jfreereport.name}-core-${jfreereport.version}.jar
-
-module-misc-beanshell-file=${targetdir}${jfreereport.name}-misc-beanshell-${jfreereport.version}.jar
-module-misc-bsf-file=${targetdir}${jfreereport.name}-misc-bsf-${jfreereport.version}.jar
-module-misc-configstore-base-file=${targetdir}${jfreereport.name}-misc-configstore-base-${jfreereport.version}.jar
-module-misc-configstore-filesystem-file=${targetdir}${jfreereport.name}-misc-configstore-filesystem-${jfreereport.version}.jar
-module-misc-logging-base-file=${targetdir}${jfreereport.name}-misc-logging-base-${jfreereport.version}.jar
-module-misc-tablemodel-file=${targetdir}${jfreereport.name}-misc-tablemodel-${jfreereport.version}.jar
-module-misc-referencedoc-file=${targetdir}${jfreereport.name}-misc-referencedoc-${jfreereport.version}.jar
-module-misc-survey-file=${targetdir}${jfreereport.name}-misc-survey-${jfreereport.version}.jar
-
-module-output-meta-file=${targetdir}${jfreereport.name}-output-meta-${jfreereport.version}.jar
-module-output-csv-file=${targetdir}${jfreereport.name}-output-csv-${jfreereport.version}.jar
-module-output-xml-file=${targetdir}${jfreereport.name}-output-xml-${jfreereport.version}.jar
-
-module-output-support-itext-file=${targetdir}${jfreereport.name}-output-support-itext-${jfreereport.version}.jar
-module-output-support-pagelayout-file=${targetdir}${jfreereport.name}-output-support-pagelayout-${jfreereport.version}.jar
-
-module-output-pageable-base-file=${targetdir}${jfreereport.name}-output-pageable-base-${jfreereport.version}.jar
-module-output-pageable-graphics-file=${targetdir}${jfreereport.name}-output-pageable-graphics-${jfreereport.version}.jar
-module-output-pageable-pdf-file=${targetdir}${jfreereport.name}-output-pageable-pdf-${jfreereport.version}.jar
-module-output-pageable-plaintext-file=${targetdir}${jfreereport.name}-output-pageable-plaintext-${jfreereport.version}.jar
-
-module-output-table-base-file=${targetdir}${jfreereport.name}-output-table-base-${jfreereport.version}.jar
-module-output-table-csv-file=${targetdir}${jfreereport.name}-output-table-csv-${jfreereport.version}.jar
-module-output-table-html-file=${targetdir}${jfreereport.name}-output-table-html-${jfreereport.version}.jar
-module-output-table-rtf-file=${targetdir}${jfreereport.name}-output-table-rtf-${jfreereport.version}.jar
-module-output-table-xls-file=${targetdir}${jfreereport.name}-output-table-xls-${jfreereport.version}.jar
-
-module-parser-base-file=${targetdir}${jfreereport.name}-parser-base-${jfreereport.version}.jar
-module-parser-ext-file=${targetdir}${jfreereport.name}-parser-ext-${jfreereport.version}.jar
-module-parser-extwriter-file=${targetdir}${jfreereport.name}-parser-extwriter-${jfreereport.version}.jar
-module-parser-simple-file=${targetdir}${jfreereport.name}-parser-simple-${jfreereport.version}.jar
-
-module-gui-base-file=${targetdir}${jfreereport.name}-gui-base-${jfreereport.version}.jar
-module-gui-converter-file=${targetdir}${jfreereport.name}-gui-converter-${jfreereport.version}.jar
-module-gui-config-file=${targetdir}${jfreereport.name}-gui-config-${jfreereport.version}.jar
-module-gui-csv-file=${targetdir}${jfreereport.name}-gui-csv-${jfreereport.version}.jar
-module-gui-html-file=${targetdir}${jfreereport.name}-gui-html-${jfreereport.version}.jar
-module-gui-pdf-file=${targetdir}${jfreereport.name}-gui-pdf-${jfreereport.version}.jar
-module-gui-plaintext-file=${targetdir}${jfreereport.name}-gui-plaintext-${jfreereport.version}.jar
-module-gui-print-file=${targetdir}${jfreereport.name}-gui-print-${jfreereport.version}.jar
-module-gui-xls-file=${targetdir}${jfreereport.name}-gui-xls-${jfreereport.version}.jar
-module-gui-rtf-file=${targetdir}${jfreereport.name}-gui-rtf-${jfreereport.version}.jar
-module-gui-skin-base-file=${targetdir}${jfreereport.name}-gui-skin-base-${jfreereport.version}.jar
+jfreereport-core-jar-file=${targetdir}${jfreereport.name}-core-${jfreereport.version}.jar
