--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -9,7 +9,7 @@ org.jfree.base.LogTarget=org.jfree.util.PrintStreamLogTarget
 #
 # Where to store cached configuration data
 #
-org.jfree.report.ConfigStore=org.jfree.report.modules.misc.configstore.filesystem.FileConfigStorage
+org.jfree.report.ConfigStore=org.jfree.report.modules.preferences.filesystem.FileConfigStorage
 
 #
 # Defines a stricter error handling, if set to true, then all errors that
@@ -92,58 +92,77 @@ org.jfree.report.WarnInvalidColumns=true
 # If this property is set to "true" a hard coded default is used instead.
 org.jfree.report.NoPrinterAvailable=false
 
-#
-# Defines the known modules. It is not fatal if they are not found.
-#
-org.jfree.report.modules.gui.base.Module=org.jfree.report.modules.gui.base.PreviewBaseModule
-org.jfree.report.modules.gui.config.Module=org.jfree.report.modules.gui.config.ConfigGUIModule
-org.jfree.report.modules.gui.converter.Module=org.jfree.report.modules.gui.converter.ConverterGUIModule
-org.jfree.report.modules.gui.csv.Module=org.jfree.report.modules.gui.csv.CSVExportGUIModule
-org.jfree.report.modules.gui.html.Module=org.jfree.report.modules.gui.html.HTMLExportGUIModule
-org.jfree.report.modules.gui.pdf.Module=org.jfree.report.modules.gui.pdf.PDFExportGUIModule
-org.jfree.report.modules.gui.plaintext.Module=org.jfree.report.modules.gui.plaintext.PlainTextExportGUIModule
-org.jfree.report.modules.gui.print.Module=org.jfree.report.modules.gui.print.AWTPrintingGUIModule
-org.jfree.report.modules.gui.rtf.Module=org.jfree.report.modules.gui.rtf.RTFExportGUIModule
-org.jfree.report.modules.gui.xls.Module=org.jfree.report.modules.gui.xls.ExcelExportGUIModule
+###############
+# JFreeReport 0.9 Modules
+##
+org.jfree.report.modules.data.beans=
+org.jfree.report.modules.data.sql.Module=org.jfree.report.modules.data.sql.SQLReportDataModule
+org.jfree.report.modules.data.xpath=
 
-#
-# Base modules ..
-org.jfree.report.modules.base.core.Module=org.jfree.report.JFreeReportCoreModule
 
-#
-# Helper modules ..
+org.jfree.report.modules.factories.common.Module=org.jfree.report.modules.factories.common.FactoriesCommonModule
+org.jfree.report.modules.factories.data.base.Module=org.jfree.report.modules.factories.data.base.ReportDataFactoryBaseModule
+org.jfree.report.modules.factories.data.sql.Module=org.jfree.report.modules.factories.data.sql.SQLDataFactoryModule
+
+org.jfree.report.modules.factories.report.base.Module=org.jfree.report.modules.factories.report.base.ReportFactoryBaseModule
+org.jfree.report.modules.factories.report.flow.Module=org.jfree.report.modules.factories.report.flow.FlowReportFactoryModule
+
+org.jfree.report.modules.preferences.base.Module=org.jfree.report.modules.preferences.base.ConfigStoreBaseModule
+org.jfree.report.modules.preferences.filesystem.Module=org.jfree.report.modules.preferences.filesystem.FileConfigStoreModule
+
 org.jfree.report.modules.misc.bsf.Module=org.jfree.report.modules.misc.bsf.BSFModule
 org.jfree.report.modules.misc.beanshell.Module=org.jfree.report.modules.misc.beanshell.BeanShellModule
-org.jfree.report.modules.misc.referencedoc.Module=org.jfree.report.modules.misc.referencedoc.ReferenceDocModule
 org.jfree.report.modules.misc.tablemodel.Module=org.jfree.report.modules.misc.tablemodel.TableModelModule
-org.jfree.report.modules.misc.configstore.base.Module=org.jfree.report.modules.misc.configstore.base.ConfigStoreBaseModule
-org.jfree.report.modules.misc.configstore.filesystem.Module=org.jfree.report.modules.misc.configstore.filesystem.FileConfigStoreModule
 org.jfree.report.modules.misc.survey.Module=org.jfree.report.modules.misc.survey.SurveyModule
 
-# Output modules
-org.jfree.report.modules.output.meta.Module=org.jfree.report.modules.output.meta.MetaElementModule
-org.jfree.report.modules.output.csv.Module=org.jfree.report.modules.output.csv.CSVModule
-org.jfree.report.modules.output.xml.Module=org.jfree.report.modules.output.xml.XMLModule
-org.jfree.report.modules.output.support.itext.Module=org.jfree.report.modules.output.support.itext.BaseFontModule
-org.jfree.report.modules.output.support.pagelayout.Module=org.jfree.report.modules.output.support.pagelayout.PageLayoutModule
 
-# pageable output modules
-org.jfree.report.modules.output.pageable.base.Module=org.jfree.report.modules.output.pageable.base.PageableBaseModule
-org.jfree.report.modules.output.pageable.graphics.Module=org.jfree.report.modules.output.pageable.graphics.Graphics2DPageableModule
-org.jfree.report.modules.output.pageable.pdf.Module=org.jfree.report.modules.output.pageable.pdf.PDFPageableModule
-org.jfree.report.modules.output.pageable.plaintext.Module=org.jfree.report.modules.output.pageable.plaintext.PlainTextPageableModule
-
-# table output modules
-org.jfree.report.modules.output.table.base.Module=org.jfree.report.modules.output.table.base.TableBaseModule
-org.jfree.report.modules.output.table.csv.Module=org.jfree.report.modules.output.table.csv.CSVTableModule
-org.jfree.report.modules.output.table.html.Module=org.jfree.report.modules.output.table.html.HtmlTableModule
-org.jfree.report.modules.output.table.rtf.Module=org.jfree.report.modules.output.table.rtf.RTFTableModule
-org.jfree.report.modules.output.table.xls.Module=org.jfree.report.modules.output.table.xls.ExcelTableModule
-
+##
+## Defines the known modules. It is not fatal if they are not found.
+## (Below are the modules of JFreeReport 0.8 - they are not ported yet.
+##
+#org.jfree.report.modules.gui.base.Module=org.jfree.report.modules.gui.base.PreviewBaseModule
+#org.jfree.report.modules.gui.config.Module=org.jfree.report.modules.gui.config.ConfigGUIModule
+#org.jfree.report.modules.gui.converter.Module=org.jfree.report.modules.gui.converter.ConverterGUIModule
+#org.jfree.report.modules.gui.csv.Module=org.jfree.report.modules.gui.csv.CSVExportGUIModule
+#org.jfree.report.modules.gui.html.Module=org.jfree.report.modules.gui.html.HTMLExportGUIModule
+#org.jfree.report.modules.gui.pdf.Module=org.jfree.report.modules.gui.pdf.PDFExportGUIModule
+#org.jfree.report.modules.gui.plaintext.Module=org.jfree.report.modules.gui.plaintext.PlainTextExportGUIModule
+#org.jfree.report.modules.gui.print.Module=org.jfree.report.modules.gui.print.AWTPrintingGUIModule
+#org.jfree.report.modules.gui.rtf.Module=org.jfree.report.modules.gui.rtf.RTFExportGUIModule
+#org.jfree.report.modules.gui.xls.Module=org.jfree.report.modules.gui.xls.ExcelExportGUIModule
 #
-# XML Parser modules ..
-org.jfree.report.modules.parser.base.Module=org.jfree.report.modules.parser.base.ParserBaseModule
-org.jfree.report.modules.parser.ext.Module=org.jfree.report.modules.parser.ext.ExtParserModule
-org.jfree.report.modules.parser.extwriter.Module=org.jfree.report.modules.parser.extwriter.ExtWriterModule
-org.jfree.report.modules.parser.simple.Module=org.jfree.report.modules.parser.simple.SimpleParserModule
+##
+## Base modules ..
+#org.jfree.report.modules.base.core.Module=org.jfree.report.JFreeReportCoreModule
+#
+##
+## Helper modules ..
+#org.jfree.report.modules.misc.referencedoc.Module=org.jfree.report.modules.misc.referencedoc.ReferenceDocModule
+#
+## Output modules
+#org.jfree.report.modules.output.meta.Module=org.jfree.report.modules.output.meta.MetaElementModule
+#org.jfree.report.modules.output.csv.Module=org.jfree.report.modules.output.csv.CSVModule
+#org.jfree.report.modules.output.xml.Module=org.jfree.report.modules.output.xml.XMLModule
+#org.jfree.report.modules.output.support.itext.Module=org.jfree.report.modules.output.support.itext.BaseFontModule
+#org.jfree.report.modules.output.support.pagelayout.Module=org.jfree.report.modules.output.support.pagelayout.PageLayoutModule
+#
+## pageable output modules
+#org.jfree.report.modules.output.pageable.base.Module=org.jfree.report.modules.output.pageable.base.PageableBaseModule
+#org.jfree.report.modules.output.pageable.graphics.Module=org.jfree.report.modules.output.pageable.graphics.Graphics2DPageableModule
+#org.jfree.report.modules.output.pageable.pdf.Module=org.jfree.report.modules.output.pageable.pdf.PDFPageableModule
+#org.jfree.report.modules.output.pageable.plaintext.Module=org.jfree.report.modules.output.pageable.plaintext.PlainTextPageableModule
+#
+## table output modules
+#org.jfree.report.modules.output.table.base.Module=org.jfree.report.modules.output.table.base.TableBaseModule
+#org.jfree.report.modules.output.table.csv.Module=org.jfree.report.modules.output.table.csv.CSVTableModule
+#org.jfree.report.modules.output.table.html.Module=org.jfree.report.modules.output.table.html.HtmlTableModule
+#org.jfree.report.modules.output.table.rtf.Module=org.jfree.report.modules.output.table.rtf.RTFTableModule
+#org.jfree.report.modules.output.table.xls.Module=org.jfree.report.modules.output.table.xls.ExcelTableModule
+#
+##
+## XML Parser modules ..
+#org.jfree.report.modules.parser.base.Module=org.jfree.report.modules.parser.base.ParserBaseModule
+#org.jfree.report.modules.parser.ext.Module=org.jfree.report.modules.parser.ext.ExtParserModule
+#org.jfree.report.modules.parser.extwriter.Module=org.jfree.report.modules.parser.extwriter.ExtWriterModule
+#org.jfree.report.modules.parser.simple.Module=org.jfree.report.modules.parser.simple.SimpleParserModule
 
