--- a/jfreereport/ant/build.xml
+++ b/jfreereport/ant/build.xml
@@ -1,232 +1,144 @@
-<!-- An ANT build file for JFreeReport -->
+<!--
+  ~ Copyright (c) 2006, Your Corporation. All Rights Reserved.
+  -->
 
-<!-- This is the master control file for all ant builds. -->
+<!-- An ANT build file for JFreeReport. -->
+
+<!-- Written by David Gilbert and modified for libFonts by Thomas Morgner. -->
+<!-- 09-Nov-2005 -->
+
+<!-- This script has been tested with Ant version 1.6.2. -->
+
+<!-- Several temporary directories are created while the script is -->
+<!-- running: "../build" and "../distribution".  -->
+
+<!-- A "../javadoc" directory will be created for the Javadoc -->
+<!-- HTML pages. -->
+
+<!-- The script should work for the distribution and also the CVS -->
+<!-- repository. -->
 
 <project name="jfreereport" default="all" basedir="..">
 
-  <target name="init">
+  <import file="build-lib.xml"/>
+
+  <!-- Initialisation. -->
+  <target name="initialise" description="Initialise required settings.">
+    <tstamp/>
+
+    <property name="builddir" value="build"/>
+
     <dirname property="antfile.dir" file="${ant.file}"/>
-    <ant antfile="${antfile.dir}/build-core.xml" target="init"/>
     <property file="${antfile.dir}/build.properties"/>
 
-    <antcall target="rebuild-core"/>
+    <isClassAndFileAvailable class-name="org.jfree.JCommon"
+                             property-name="lib.jcommon.present"
+                             file-name="${libdir}/${jcommon-jar-file}"/>
+    <fail unless="lib.jcommon.present"/>
   </target>
 
-  <target name="check-core">
-    <available file="${core-jar-file}" type="file" property="core-jar-file-present"/>
-    <echo>Core (${core-jar-file}) present: ${core-jar-file-present}</echo>
+  <!-- Compile the libfonts classes -->
+  <target name="compile" depends="initialise">
+
+    <build-all target-jar="${jfreereport-jar-file}"
+               source-dir="source">
+      <all-classpath>
+        <pathelement location="${libdir}/${jcommon-jar-file}"/>
+        <pathelement location="${libdir}/${jcommon-serializer-jar-file}"/>
+        <pathelement location="${libdir}/${libfonts-jar-file}"/>
+        <pathelement location="${libdir}/${libloader-jar-file}"/>
+        <pathelement location="${libdir}/${liblayout-jar-file}"/>
+        <pathelement location="${libdir}/${beanshell-jar-file}"/>
+        <pathelement location="${libdir}/${bsf-jar-file}"/>
+        <pathelement location="${libdir}/${jaxp-jar-file}"/>
+      </all-classpath>
+      <all-resources>
+        <include name="*.properties"/>
+        <include name="*.bsh"/>
+        <include name="*.xsd"/>
+      </all-resources>
+    </build-all>
   </target>
 
-  <target name="rebuild-core" unless="core-jar-file-present" depends="check-core">
-    <echo>Rebuilding core ...</echo>
-    <dirname property="antfile.dir" file="${ant.file}"/>
-    <ant antfile="${antfile.dir}/build-core.xml" target="all"/>
-  </target>
-
-  <target name="check-module-file" depends="init">
-    <tempfile property="resolve.tmp" prefix="jfreereport-build-" suffix="-tmp.properties"/>
-
-    <echo file="${resolve.tmp}">#
-# temporary build property file for ${module}
-module-file=$${module-${module}-file}</echo>
-    <property file="${resolve.tmp}"/>
-    <delete file="${resolve.tmp}"/>
-    <available file="${module-file}" property="module-file-present"/>
-  </target>
-
-  <target name="rebuild-module-file" unless="module-file-present" depends="check-module-file">
-    <dirname property="antfile.dir" file="${ant.file}"/>
-    <ant antfile="${antfile.dir}/${buildfile}" target="compile-module-${module}"/>
-  </target>
-
-  <!-- Generate the JFreeReport JavaDoc HTML pages -->
-  <target name="javadoc" depends="init">
+  <!-- Generate the libfonts JavaDoc HTML pages -->
+  <target name="javadoc" depends="initialise">
     <delete dir="javadoc"/>
     <mkdir dir="javadoc"/>
-    <javadoc destdir="javadoc" maxmemory="128m"
-      windowtitle="JFreeReport Class Library"
-      overview="source/overview.html">
+    <javadoc destdir="javadoc"
+      windowtitle="JFreeReport (version ${jfreereport.version})"
+      overview="source/overview.html"
+      linksource="true">
       <classpath>
-        <pathelement location="${libdir}/${jcommon-xml-jar-file}" />
-        <pathelement location="${libdir}/${jcommon-jar-file}" />
-        <pathelement location="${libdir}/${jaxp-jar-file}" />
-        <pathelement location="${libdir}/${bsf-jar-file}" />
-        <pathelement location="${libdir}/${beanshell-jar-file}" />
-        <pathelement location="${libdir}/${itext-jar-file}" />
+        <pathelement location="${libdir}/${jcommon-jar-file}"/>
+        <pathelement location="${libdir}/${jcommon-serializer-jar-file}"/>
         <pathelement location="${libdir}/${libfonts-jar-file}"/>
-        <pathelement location="${libdir}/${pixie-jar-file}" />
-        <pathelement location="${libdir}/${jakarta-poi-jar-file}"/>
+        <pathelement location="${libdir}/${libloader-jar-file}"/>
+        <pathelement location="${libdir}/${liblayout-jar-file}"/>
+        <pathelement location="${libdir}/${beanshell-jar-file}"/>
+        <pathelement location="${libdir}/${bsf-jar-file}"/>
+        <pathelement location="${libdir}/${jaxp-jar-file}"/>
       </classpath>
       <packageset dir="source" defaultexcludes="yes">
-        <include name="org/jfree/report/**"/>
+        <include name="org/jfree/report"/>
+        <exclude name="**/junit/**"/>
       </packageset>
     </javadoc>
   </target>
 
-  <target name="create-dist-dir" depends="init">
-    <!-- make a temporary distribution directory -->
-    <mkdir dir="distribution"/>
-
+  <target name="fill-dist-dir">
     <!-- copy across README -->
-    <copy file="README" tofile="distribution/README"/>
-
-    <!-- copy across ChangeLog -->
-    <copy file="ChangeLog" tofile="distribution/ChangeLog"/>
+    <copy file="README"
+      tofile="distribution/README" failonerror="false"/>
 
     <!-- copy across LICENCE -->
-    <copy file="licence-LGPL.txt" tofile="distribution/licence-LGPL.txt"/>
+    <copy file="licence-LGPL.txt"
+      tofile="distribution/licence-LGPL.txt"/>
 
-    <!-- copy across migration.txt -->
-    <copy file="migration.txt" tofile="distribution/migration.txt"/>
+    <!-- copy across runtime jar file -->
+    <copy file="${jfreereport-jar-file}"
+      tofile="distribution/${jfreereport-jar-file}"/>
 
-    <!-- copy across migration.txt -->
-    <copy file="modules.txt" tofile="distribution/modules.txt"/>
+  	<!-- copy across maven xml files -->
+  	<copy file="maven-jfreereport-project.xml"
+  		tofile="distribution/maven-jfreereport-project.xml"/>
 
     <!-- copy across source files -->
     <copy todir="distribution/source">
       <fileset dir="source"/>
     </copy>
 
-    <!-- copy across resource files (example PDFs) -->
-    <copy todir="distribution/resource">
-      <fileset dir="resource"/>
-    </copy>
-
-    <!-- copy across lib files -->
-    <copy todir="distribution/lib">
-      <fileset dir="lib"/>
-    </copy>
-
     <!-- copy across ant build file (this file) -->
-    <copy todir="distribution/ant">
-      <fileset dir="ant"/>
-    </copy>
+    <copy file="ant/build.xml"
+      tofile="distribution/ant/build.xml" failonerror="false"/>
+    <copy file="ant/build-lib.xml"
+      tofile="distribution/ant/build-lib.xml"/>
 
-    <!-- copy across checkstyle property file -->
-    <copy todir="distribution/checkstyle">
-      <fileset dir="checkstyle"/>
-    </copy>
-
-    <!-- copy across runtime jar files -->
-    <copy todir="distribution">
-      <fileset dir=".">
-        <include name="${jfreereport.name}-${jfreereport.version}.jar"/>
-        <include name="${jfreereport.name}-*-${jfreereport.version}.jar"/>
-      </fileset>
-    </copy>
-
-    <copy file="maven-jfreereport-project.xml"
-          tofile="distribution/maven-jfreereport-project.xml"/>
-	
+    <copy file="ant/build.properties"
+      tofile="distribution/ant/build.properties"/>
   </target>
 
-  <target name="remove-dist-dir">
-
-    <!-- delete the temporary distribution directory -->
-    <delete dir="distribution"/>
-
+  <!-- Make .zip distribution for libfonts -->
+  <target name="zip" depends="compile">
+    <make-zip lib.version="${jfreereport.version}" lib.name="${jfreereport.name}"/>
   </target>
 
-  <!-- Make .zip distribution for JFreeReport -->
-  <target name="make-zip">
-
-    <antcall target="create-dist-dir"/>
-
-    <!-- convert end-of-line characters in text files -->
-    <!-- end of file does not need to be marked, and causes trouble if it is -->
-    <fixcrlf srcdir="distribution/source"
-      eol="crlf" eof="remove"
-      excludes="**/*.jpg **/*.gif **/*.png **/*.wmf"/>
-    <fixcrlf srcdir="distribution/ant"
-      eol="crlf" eof="remove"/>
-
-    <!-- make the zip file -->
-    <zip zipfile="${jfreereport.name}-${jfreereport.version}.zip">
-      <zipfileset dir="distribution"
-        prefix="${jfreereport.name}-${jfreereport.version}"/>
-    </zip>
-
-    <antcall target="remove-dist-dir"/>
-
+  <!-- Make .tar.gz distribution for libfonts -->
+  <target name="targz" depends="compile">
+    <make-targz lib.version="${jfreereport.version}" lib.name="${jfreereport.name}"/>
   </target>
 
-  <!-- Make .tar.gz distribution for JFreeReport -->
-  <target name="make-targz">
-
-    <antcall target="create-dist-dir"/>
-
-    <!-- convert end-of-line characters in text files -->
-    <fixcrlf srcdir="distribution/source"
-      eol="lf" eof="remove"
-      excludes="**/*.jpg **/*.gif **/*.png **/*.wmf"/>
-    <fixcrlf srcdir="distribution/ant"
-      eol="lf" eof="remove"/>
-
-    <!-- make the tar.gz file -->
-    <tar tarfile="${jfreereport.name}-${jfreereport.version}.tar">
-      <tarfileset dir="distribution"
-        prefix="${jfreereport.name}-${jfreereport.version}"/>
-    </tar>
-    <gzip zipfile="${jfreereport.name}-${jfreereport.version}.tar.gz"
-      src="${jfreereport.name}-${jfreereport.version}.tar"/>
-    <delete file="${jfreereport.name}-${jfreereport.version}.tar"/>
-
-    <antcall target="remove-dist-dir"/>
-
+  <target name="maven-bundle" depends="compile" >
+    <make-maven-bundle lib.version="${jfreereport.version}"
+                       lib.name="${jfreereport.name}"
+                       lib.file="${jfreereport-jar-file}"
+                       target="${jfreereport-bundle-jar-file}"/>
   </target>
 
 
-  <target name="maven-bundle" depends="init, build-all"> 
-  <!--  depends="build-all" > -->
-  
-    <!-- make a temporary distribution directory -->
-    <mkdir dir="distribution"/>
-    <!-- copy across Licences -->
-    <copy file="licence-LGPL.txt" tofile="distribution/LICENSE.txt"/>
-
-    <filterchain id="version.filters">
-       <replacetokens>
-         <token key="VERSION" value="${jfreereport.version}"/>
-         <token key="JCOMMON.VERSION" value="${jcommon.version}"/>
-       </replacetokens>
-    </filterchain>
-
-    <copy file="maven-jfreereport-project.xml" tofile="distribution/project.xml">
-      <filterchain refid="version.filters"/>
-    </copy>
-
-    <copy file="${jfreereport-all-jar-file}" tofile="distribution/${jfreereport-all-jar-file}"/>
-
-    <!-- make the jar -->
-    <jar jarfile="${jfreereport-bundle-jar-file}" basedir="distribution"/>
-
-    <!-- delete the temporary distribution directory -->
-    <delete dir="distribution"/>
-  </target>
-
-  <!-- core tasks                              -->
-  <!-- These tasks are needed for all modules  -->
-  <!-- ......................................  -->
-  <description>
-    We assume that at least a JDK 1.2.2 is installed.
-  </description>
-
-  <target name="all" depends="build-all, javadoc, make-targz, make-zip, maven-bundle">
-
-  </target>
-
-  <target name="build-all">
-    <dirname property="antfile.dir" file="${ant.file}"/>
-    <ant antfile="${antfile.dir}/build-core.xml" target="all"/>
-    <ant antfile="${antfile.dir}/build-misc.xml" target="all"/>
-    <ant antfile="${antfile.dir}/build-output-misc.xml" target="all"/>
-    <ant antfile="${antfile.dir}/build-output-table.xml" target="all"/>
-    <ant antfile="${antfile.dir}/build-output-pageable.xml" target="all"/>
-    <ant antfile="${antfile.dir}/build-parser.xml" target="all"/>
-    <ant antfile="${antfile.dir}/build-reference.xml" target="all"/>
-    <ant antfile="${antfile.dir}/build-gui.xml" target="all"/>
-    <ant antfile="${antfile.dir}/build-all.xml" target="all"/>
-    <ant antfile="${antfile.dir}/build-demo.xml" target="all"/>
+  <!-- ALL -->
+  <target name="all"
+    depends="compile,javadoc,zip,targz,maven-bundle"
+    description="Compiles JFreeReport, builds the jar files, generates the Javadoc HTML pages and creates distribution files (.zip and .tar.gz).">
   </target>
 
 </project>
