Minor changes in the Namespace handling; removed the content-element style declaration from the libLayout-namespace, as this is a JFreeReport- only definition.

--- a/liblayout/source/org/jfree/layouting/layout.properties
+++ b/liblayout/source/org/jfree/layouting/layout.properties
@@ -21,6 +21,27 @@ org.jfree.layouting.fontrenderer.IsBuggyFRC=false
 # We need a CSS-SAC parser implementation. Use the flute-parser by default. 
 org.jfree.layouting.css.Parser=org.w3c.flute.parser.Parser
 
+##
+# Known namespaces.
+org.jfree.layouting.namespaces.html.Uri=http://www.w3.org/TR/REC-html40
+org.jfree.layouting.namespaces.html.Default-Style=res://org/jfree/layouting/html.css
+org.jfree.layouting.namespaces.html.ClassAttr=class
+org.jfree.layouting.namespaces.html.StyleAttr=style
+org.jfree.layouting.namespaces.html.Prefix=html
+
+org.jfree.layouting.namespaces.xhtml.Uri=http://www.w3.org/1999/xhtml
+org.jfree.layouting.namespaces.xhtml.Default-Style=res://org/jfree/layouting/html.css
+org.jfree.layouting.namespaces.xhtml.ClassAttr=class
+org.jfree.layouting.namespaces.xhtml.StyleAttr=style
+org.jfree.layouting.namespaces.xhtml.Prefix=html
+
+org.jfree.layouting.namespaces.liblayout.Uri=http://jfreereport.sourceforge.net/namespaces/liblayout
+org.jfree.layouting.namespaces.liblayout.Default-Style=res://org/jfree/layouting/liblayout.css
+org.jfree.layouting.namespaces.liblayout.ClassAttr=class
+org.jfree.layouting.namespaces.liblayout.StyleAttr=style
+org.jfree.layouting.namespaces.liblayout.Prefix=liblayout
+
+
 #
 # Defines the scaling from normal size to the appropriate font sizes when
 # specified as absolute values.
