Made the LayoutPosition a generic interface; Namespace handling changed; ReportJob is now more important and carries an own version of the datasource and report configuration for better reusability of the report definition object.

--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -92,6 +92,21 @@ org.jfree.report.WarnInvalidColumns=true
 # If this property is set to "true" a hard coded default is used instead.
 org.jfree.report.NoPrinterAvailable=false
 
+##
+# Known namespaces.
+org.jfree.report.namespaces.flow.Uri=http://jfreereport.sourceforge.net/namespaces/engine/flow
+org.jfree.report.namespaces.flow.Default-Style=res://org/jfree/report/flow.css
+org.jfree.report.namespaces.flow.ClassAttr=class
+org.jfree.report.namespaces.flow.StyleAttr=style
+org.jfree.report.namespaces.flow.Prefix=report-flow
+
+org.jfree.report.namespaces.compatibility.Uri=http://jfreereport.sourceforge.net/namespaces/engine/compatiblity
+org.jfree.report.namespaces.compatibility.Default-Style=res://org/jfree/report/compat.css
+org.jfree.report.namespaces.compatibility.ClassAttr=class
+org.jfree.report.namespaces.compatibility.StyleAttr=style
+org.jfree.report.namespaces.compatibility.Prefix=report-compat
+
+
 ###############
 # JFreeReport 0.9 Modules
 ##
