--- a/libloader/source/org/jfree/resourceloader/loader.properties
+++ b/libloader/source/org/jfree/resourceloader/loader.properties
@@ -32,6 +32,7 @@ org.jfree.resourceloader.cache.DataCacheProvider=org.jfree.resourceloader.module
 # org.jfree.resourceloader.factory.type.<java-FQ-classname>=<factory-implementation-class>
 org.jfree.resourceloader.factory.type.java.awt.Image=org.jfree.resourceloader.factory.image.ImageResourceFactory
 org.jfree.resourceloader.factory.type.org.jfree.ui.Drawable=org.jfree.resourceloader.factory.drawable.DrawableResourceFactory
+org.jfree.resourceloader.factory.type.java.util.Properties=org.jfree.resourceloader.factory.property.PropertyResourceFactory
 
 #
 # The factory modules are responsible for loading a certain sub-format. The
