Encoding support added

--- a/libfonts/ant/build.xml
+++ b/libfonts/ant/build.xml
@@ -43,7 +43,10 @@
         <pathelement location="${libdir}/${jcommon-jar-file}"/>
       </all-classpath>
       <all-resources>
+        <include name="**/*.properties"/>
         <include name="*.properties"/>
+        <include name="**/*.ser"/>
+        <include name="*.ser"/>
       </all-resources>
     </build-all>
   </target>
