--- a/libfonts/source/org/jfree/fonts/libfont.properties
+++ b/libfonts/source/org/jfree/fonts/libfont.properties
@@ -3,3 +3,16 @@
 # The known font registries
 org.jfree.fonts.FontRegistry.TrueType=org.jfree.fonts.truetype.TrueTypeFontRegistry
 org.jfree.fonts.FontRegistry.AWT=org.jfree.fonts.awt.AWTFontRegistry
+
+org.jfree.fonts.encodings.EnableJavaFallback=true
+org.jfree.fonts.encoding.generated.8BitEncodings=res://org/jfree/fonts/encoding/generated/encodings.properties
+
+
+#
+# Additional encodings. If an encoding here has the same name as one of the
+# generated encodings, this manual encoding is preferred.
+#org.jfree.fonts.encoding.manual.<name>=<encoding-implementation>
+
+org.jfree.fonts.encoding.manual.UTF16-LE=org.jfree.fonts.encoding.manual.Utf16LE
+org.jfree.fonts.encoding.manual.ASCII=org.jfree.fonts.encoding.manual.Ascii
+org.jfree.fonts.encoding.manual.ISO-8859-1=org.jfree.fonts.encoding.manual.Iso8859_1
