LibFonts release 0.1.7 - encoding support

--- a/libfonts/ant/build.properties
+++ b/libfonts/ant/build.properties
@@ -39,7 +39,7 @@ manifest-lib-prefix=lib/
 
 # Used by: module-misc-beanshell
 jcommon-jar-file=jcommon-1.0.3.jar
-
+libloader-jar-file=libloader-0.1.1.jar
 
 ##############################################################
 #
