--- a/libfonts/ant/build.xml
+++ b/libfonts/ant/build.xml
@@ -31,6 +31,15 @@
                              property-name="lib.jcommon.present"
                              file-name="${libdir}/${jcommon-jar-file}"/>
     <fail unless="lib.jcommon.present"/>
+
+    <isClassAndFileAvailable class-name="org.jfree.resourceloader.LibLoaderInfo"
+                             property-name="lib.libloader.present"
+                             file-name="${libdir}/${libloader-jar-file}">
+      <test-classpath>
+        <pathelement location="${libdir}/${jcommon-jar-file}"/>
+      </test-classpath>
+    </isClassAndFileAvailable>
+    <fail unless="lib.libloader.present"/>
   </target>
 
   <!-- Compile the libfonts classes -->
@@ -41,6 +50,7 @@
                source-dir="source">
       <all-classpath>
         <pathelement location="${libdir}/${jcommon-jar-file}"/>
+        <pathelement location="${libdir}/${libloader-jar-file}"/>
       </all-classpath>
       <all-resources>
         <include name="**/*.properties"/>
@@ -61,6 +71,7 @@
       linksource="true">
       <classpath>
         <pathelement location="${libdir}/${jcommon-jar-file}"/>
+        <pathelement location="${libdir}/${libloader-jar-file}"/>
       </classpath>
       <packageset dir="source" defaultexcludes="yes">
         <include name="org/jfree/fonts"/>
@@ -72,7 +83,7 @@
   <target name="fill-dist-dir">
     <!-- copy across README -->
     <copy file="README"
-      tofile="distribution/README" failonerror="false"/>
+      tofile="distribution/README"/>
 
     <!-- copy across LICENCE -->
     <copy file="licence-LGPL.txt"
@@ -91,9 +102,13 @@
       <fileset dir="source"/>
     </copy>
 
+    <copy todir="distribution/lib">
+      <fileset dir="lib"/>
+    </copy>
+
     <!-- copy across ant build file (this file) -->
     <copy file="ant/build.xml"
-      tofile="distribution/ant/build.xml" failonerror="false"/>
+      tofile="distribution/ant/build.xml"/>
     <copy file="ant/build-lib.xml"
       tofile="distribution/ant/build-lib.xml"/>
 
