LibLayout update: Namespace awareness through new flute-parser; include css files in jar

--- a/liblayout/ant/build.xml
+++ b/liblayout/ant/build.xml
@@ -81,6 +81,7 @@
       </all-classpath>
       <all-resources>
         <include name="*.properties"/>
+        <include name="*.css"/>
       </all-resources>
     </build-all>
   </target>
