--- a/liblayout/ant/build.properties
+++ b/liblayout/ant/build.properties
@@ -39,10 +39,10 @@ manifest-lib-prefix=lib/
 
 # Used by: module-misc-beanshell
 jcommon-jar-file=jcommon-1.0.3.jar
-libfonts-jar-file=libfonts-0.1.6.jar
-flute-jar-file=flute.jar
+libfonts-jar-file=libfonts-0.1.7.jar
+flute-jar-file=flute-1.3-jfree.jar
 sac-jar-file=sac.jar
-libloader-jar-file=libloader-0.1.0.jar
+libloader-jar-file=libloader-0.1.1.jar
 
 ##############################################################
 #
