--- a/liblayout/ant/build.xml
+++ b/liblayout/ant/build.xml
@@ -81,7 +81,9 @@
       </all-classpath>
       <all-resources>
         <include name="*.properties"/>
+        <include name="**/*.properties"/>
         <include name="*.css"/>
+        <include name="**/*.css"/>
       </all-resources>
     </build-all>
   </target>
