More work to make it compatible to the arch-doc

--- a/jfreereport/ant/build.xml
+++ b/jfreereport/ant/build.xml
@@ -54,8 +54,13 @@
       </all-classpath>
       <all-resources>
         <include name="*.properties"/>
+        <include name="**/*.properties"/>
         <include name="*.bsh"/>
+        <include name="**/*.bsh"/>
         <include name="*.xsd"/>
+        <include name="**/*.xsd"/>
+        <include name="*.css"/>
+        <include name="**/*.css"/>
       </all-resources>
     </build-all>
   </target>
