--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -94,11 +94,11 @@ org.jfree.report.NoPrinterAvailable=false
 
 ##
 # Known namespaces.
-org.jfree.report.namespaces.flow.Uri=http://jfreereport.sourceforge.net/namespaces/engine/flow
-org.jfree.report.namespaces.flow.Default-Style=res://org/jfree/report/flow.css
-org.jfree.report.namespaces.flow.ClassAttr=class
-org.jfree.report.namespaces.flow.StyleAttr=style
-org.jfree.report.namespaces.flow.Prefix=report-flow
+org.jfree.report.namespaces.engine.Uri=http://jfreereport.sourceforge.net/namespaces/engine/flow
+org.jfree.report.namespaces.engine.Default-Style=res://org/jfree/report/engine.css
+org.jfree.report.namespaces.engine.ClassAttr=class
+org.jfree.report.namespaces.engine.StyleAttr=style
+org.jfree.report.namespaces.engine.Prefix=report-engine
 
 org.jfree.report.namespaces.compatibility.Uri=http://jfreereport.sourceforge.net/namespaces/engine/compatiblity
 org.jfree.report.namespaces.compatibility.Default-Style=res://org/jfree/report/compat.css
