--- a/jfreereport/source/org/jfree/report/modules/factories/report/flow/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/factories/report/flow/configuration.properties
@@ -8,3 +8,10 @@
 # parser registry.
 org.jfree.resourceloader.factory.modules.org.jfree.report.JFreeReport.flow=org.jfree.report.modules.factories.report.flow.FlowXmlFactoryModule
 org.jfree.resourceloader.factory.modules.org.jfree.report.structure.SubReport.flow=org.jfree.report.modules.factories.report.flow.FlowXmlFactoryModule
+
+org.jfree.report.namespaces.xml-flow.Uri=http://jfreereport.sourceforge.net/namespaces/reports/flow
+org.jfree.report.namespaces.xml-flow.Default-Style=res://org/jfree/report/modules/factories/report/flow/flow.css
+org.jfree.report.namespaces.xml-flow.ClassAttr=class
+org.jfree.report.namespaces.xml-flow.StyleAttr=style
+org.jfree.report.namespaces.xml-flow.Prefix=xml-flow
+
