Added UTF-Encoding support (for URL Encodings)

--- a/liblayout/source/org/jfree/layouting/layout.properties
+++ b/liblayout/source/org/jfree/layouting/layout.properties
@@ -9,6 +9,8 @@
 #
 org.jfree.layouting.fontrenderer.UseAliasing=true
 
+org.jfree.layouting.URLEncoding=iso-8859-1
+
 #
 # This is a override setting. Some Graphics2D implementations have problems
 # with the font positioning. I don't know a way to solve that bug on the root,
