--- a/liblayout/source/org/jfree/layouting/layout.properties
+++ b/liblayout/source/org/jfree/layouting/layout.properties
@@ -437,6 +437,9 @@ org.jfree.layouting.resolver.auto.font-smooth=org.jfree.layouting.layouter.style
 #
 # Text Module
 org.jfree.layouting.resolver.auto.hyphenate=org.jfree.layouting.layouter.style.resolver.autovalue.text.HyphenateResolveHandler
+org.jfree.layouting.resolver.auto.text-underline-width=org.jfree.layouting.layouter.style.resolver.autovalue.text.TextDecorationWidthResolveHandler
+org.jfree.layouting.resolver.auto.text-overline-width=org.jfree.layouting.layouter.style.resolver.autovalue.text.TextDecorationWidthResolveHandler
+org.jfree.layouting.resolver.auto.text-line-through-width=org.jfree.layouting.layouter.style.resolver.autovalue.text.TextDecorationWidthResolveHandler
 
 
 ##### COMPUTED VALUES ############################################################
@@ -529,6 +532,9 @@ org.jfree.layouting.resolver.computed.direction=org.jfree.layouting.layouter.sty
 org.jfree.layouting.resolver.computed.block-progression=org.jfree.layouting.layouter.style.resolver.computed.text.BlockProgressionResolveHandler
 org.jfree.layouting.resolver.computed.text-overflow-mode=org.jfree.layouting.layouter.style.resolver.computed.text.TextOverflowModeResolveHandler
 org.jfree.layouting.resolver.computed.text-overflow-ellipsis=org.jfree.layouting.layouter.style.resolver.computed.text.TextOverflowEllipsisResolveHandler
+org.jfree.layouting.resolver.computed.text-underline-width=org.jfree.layouting.layouter.style.resolver.computed.text.TextDecorationWidthResolveHandler
+org.jfree.layouting.resolver.computed.text-overline-width=org.jfree.layouting.layouter.style.resolver.computed.text.TextDecorationWidthResolveHandler
+org.jfree.layouting.resolver.computed.text-line-through-width=org.jfree.layouting.layouter.style.resolver.computed.text.TextDecorationWidthResolveHandler
 
 #
 # Position Module
