--- a/pixie/ant/build.properties
+++ b/pixie/ant/build.properties
@@ -5,7 +5,7 @@
 #
 #  Global settings ...
 pixie.name=pixie
-pixie.version=0.8.5
+pixie.version=0.8.5-cvs
 
 #
 # This defines the compiler settings. Optimizing would remove
@@ -35,7 +35,7 @@ manifest-lib-prefix=lib/
 ###########################################################
 #
 #  Used libraries ...
-jcommon-jar-file=jcommon-1.0.3.jar
+jcommon-jar-file=jcommon-1.0.4.jar
 
 ##############################################################
 #
