Two weeks of layouting studies ..

--- a/liblayout/source/org/jfree/layouting/layout.properties
+++ b/liblayout/source/org/jfree/layouting/layout.properties
@@ -37,7 +37,7 @@ org.jfree.layouting.namespaces.xhtml.ClassAttr=class
 org.jfree.layouting.namespaces.xhtml.StyleAttr=style
 org.jfree.layouting.namespaces.xhtml.Prefix=html
 
-org.jfree.layouting.namespaces.liblayout.Uri=http://jfreereport.sourceforge.net/namespaces/liblayout
+org.jfree.layouting.namespaces.liblayout.Uri=http://jfreereport.sourceforge.net/namespaces/layout
 org.jfree.layouting.namespaces.liblayout.Default-Style=res://org/jfree/layouting/liblayout.css
 org.jfree.layouting.namespaces.liblayout.ClassAttr=class
 org.jfree.layouting.namespaces.liblayout.StyleAttr=style
