--- a/flute/ant/build.properties
+++ b/flute/ant/build.properties
@@ -2,7 +2,7 @@
 #
 #  Global settings ...
 flute.name=flute
-flute.version=1.3-jfree
+flute.version=1.3-jfree-20060530
 
 #
 # This defines the compiler settings. Optimizing would remove
