Pixie version update

--- a/pixie/ant/build.properties
+++ b/pixie/ant/build.properties
@@ -5,7 +5,7 @@
 #
 #  Global settings ...
 pixie.name=pixie
-pixie.version=0.8.5-cvs
+pixie.version=0.8.6
 
 #
 # This defines the compiler settings. Optimizing would remove
