TrueType metrics fix and aliasing for encodings.

--- a/libfonts/source/org/jfree/fonts/libfont.properties
+++ b/libfonts/source/org/jfree/fonts/libfont.properties
@@ -16,3 +16,7 @@ org.jfree.fonts.encoding.generated.8BitEncodings=res://org/jfree/fonts/encoding/
 org.jfree.fonts.encoding.manual.UTF16-LE=org.jfree.fonts.encoding.manual.Utf16LE
 org.jfree.fonts.encoding.manual.ASCII=org.jfree.fonts.encoding.manual.Ascii
 org.jfree.fonts.encoding.manual.ISO-8859-1=org.jfree.fonts.encoding.manual.Iso8859_1
+
+org.jfree.fonts.encoding.alias.US-ASCII=ASCII
+org.jfree.fonts.encoding.alias.8859-1=ISO-8859-1
+org.jfree.fonts.encoding.alias.UTF=UTF16-LE
