LibXML sync complete ..

--- a/libxml/ant/build.properties
+++ b/libxml/ant/build.properties
@@ -1,8 +1,8 @@
 ###########################################################
 #
 #  Global settings ...
-liblayout.name=libxml
-liblayout.version=0.1.0
+libxml.name=libxml
+libxml.version=0.1.1
 
 #
 # This defines the compiler settings. Optimizing would remove
@@ -44,5 +44,5 @@ libloader-jar-file=libloader-0.1.1.jar
 ##############################################################
 #
 # Generated files ...
-liblayout-bundle-file=${libxml.name}-${libxml.version}-bundle.jar
-liblayout-jar-file=${libxml.name}-${libxml.version}.jar
+libxml-bundle-file=${libxml.name}-${libxml.version}-bundle.jar
+libxml-jar-file=${libxml.name}-${libxml.version}.jar
