Table support in the style-parser

--- a/liblayout/source/org/jfree/layouting/layout.properties
+++ b/liblayout/source/org/jfree/layouting/layout.properties
@@ -356,6 +356,17 @@ org.jfree.layouting.parser.handlers.-x-jfreereport-y=org.jfree.layouting.input.s
 # Image-Orientation is ignored.
 # Floating areas are way too funny to be used now.
 
+#
+# Table-Module
+org.jfree.layouting.parser.handlers.border-collapse=org.jfree.layouting.input.style.parser.stylehandler.table.BorderCollapseReadHandler
+org.jfree.layouting.parser.handlers.border-spacing=org.jfree.layouting.input.style.parser.stylehandler.table.BorderSpacingReadHandler
+org.jfree.layouting.parser.handlers.caption-side=org.jfree.layouting.input.style.parser.stylehandler.table.CaptionSideReadHandler
+org.jfree.layouting.parser.handlers.empty-cells=org.jfree.layouting.input.style.parser.stylehandler.table.EmptyCellsReadHandler
+org.jfree.layouting.parser.handlers.table-layout=org.jfree.layouting.input.style.parser.stylehandler.table.TableLayoutReadHandler
+org.jfree.layouting.parser.handlers.-x-liblayout-colspan=org.jfree.layouting.input.style.parser.stylehandler.table.XColSpanReadHandler
+org.jfree.layouting.parser.handlers.-x-liblayout-rowspan=org.jfree.layouting.input.style.parser.stylehandler.table.XRowSpanReadHandler
+
+
 ##
 # Defines the parse-handlers for each known compound style property.
 # Compound styles will be resolved during the parsing. The layouting engine
