Tables - columns get computed correctly. Validate failes in TableSection

--- a/liblayout/source/org/jfree/layouting/layout.properties
+++ b/liblayout/source/org/jfree/layouting/layout.properties
@@ -561,7 +561,7 @@ org.jfree.layouting.resolver.computed.text-line-through-width=org.jfree.layoutin
 
 #
 # Page Module
-org.jfree.layouting.resolver.computed.page.size=org.jfree.layouting.layouter.style.resolver.computed.page.PageSizeResolveHandler
+org.jfree.layouting.resolver.computed.size=org.jfree.layouting.layouter.style.resolver.computed.page.PageSizeResolveHandler
 
 #
 # Position Module
