Alignment and split fixes

--- a/liblayout/source/org/jfree/layouting/layout.properties
+++ b/liblayout/source/org/jfree/layouting/layout.properties
@@ -25,11 +25,11 @@ org.jfree.layouting.css.Parser=org.w3c.flute.parser.Parser
 
 ##
 # Known namespaces.
-org.jfree.layouting.namespaces.html.Uri=http://www.w3.org/TR/REC-html40
-org.jfree.layouting.namespaces.html.Default-Style=res://org/jfree/layouting/html.css
-org.jfree.layouting.namespaces.html.ClassAttr=class
-org.jfree.layouting.namespaces.html.StyleAttr=style
-org.jfree.layouting.namespaces.html.Prefix=html
+#org.jfree.layouting.namespaces.html.Uri=http://www.w3.org/TR/REC-html40
+#org.jfree.layouting.namespaces.html.Default-Style=res://org/jfree/layouting/html.css
+#org.jfree.layouting.namespaces.html.ClassAttr=class
+#org.jfree.layouting.namespaces.html.StyleAttr=style
+#org.jfree.layouting.namespaces.html.Prefix=html
 
 org.jfree.layouting.namespaces.xhtml.Uri=http://www.w3.org/1999/xhtml
 org.jfree.layouting.namespaces.xhtml.Default-Style=res://org/jfree/layouting/html.css
