--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -38,12 +38,13 @@ manifest-lib-prefix=lib/
 #  Used libraries ...
 
 # Used by: core libraries
-jcommon-jar-file=jcommon-1.0.4.jar
+jcommon-jar-file=jcommon-1.0.5.jar
 jcommon-serializer-jar-file=jcommon-serializer-0.1.0.jar
-libfonts-jar-file=liblayout-0.1.1.jar
-liblayout-jar-file=libfonts-0.1.7.jar
-libloader-jar-file=libloader-0.1.1.jar
+libfonts-jar-file=liblayout-0.1.2.jar
+liblayout-jar-file=libfonts-0.2.0.jar
+libloader-jar-file=libloader-0.1.3.jar
 pixie-jar-file=pixie-0.8.5.jar
+libxml-jar-file=libxml-
 
 # Used by: module-misc-beanshell
 beanshell-jar-file=bsh-1.3.0.jar
