Reorganized the renderer so that it follows a clear computation model with separate phases. Doing it GUI style does not work out ..

--- a/liblayout/ant/build.xml
+++ b/liblayout/ant/build.xml
@@ -78,6 +78,8 @@
         <pathelement location="${libdir}/${libloader-jar-file}"/>
         <pathelement location="${libdir}/${sac-jar-file}"/>
         <pathelement location="${libdir}/${flute-jar-file}"/>
+        <pathelement location="${libdir}/${junit-jar-file}"/>
+        
       </all-classpath>
       <all-resources>
         <include name="*.properties"/>
