--- a/liblayout/source/org/jfree/layouting/layout.properties
+++ b/liblayout/source/org/jfree/layouting/layout.properties
@@ -232,7 +232,6 @@ org.jfree.layouting.parser.handlers.dominant-baseline=org.jfree.layouting.input.
 org.jfree.layouting.parser.handlers.alignment-baseline=org.jfree.layouting.input.style.parser.stylehandler.line.AlignmentBaselineReadHandler
 org.jfree.layouting.parser.handlers.alignment-adjust=org.jfree.layouting.input.style.parser.stylehandler.line.AlignmentAdjustReadHandler
 org.jfree.layouting.parser.handlers.baseline-shift=org.jfree.layouting.input.style.parser.stylehandler.line.BaselineShiftReadHandler
-org.jfree.layouting.parser.handlers.vertical-align=org.jfree.layouting.input.style.parser.stylehandler.line.VerticalAlignReadHandler
 org.jfree.layouting.parser.handlers.inline-box-align=org.jfree.layouting.input.style.parser.stylehandler.line.InlineBoxAlignReadHandler
 org.jfree.layouting.parser.handlers.drop-initial-size=org.jfree.layouting.input.style.parser.stylehandler.line.DropInitialSizeReadHandler
 org.jfree.layouting.parser.handlers.drop-initial-value=org.jfree.layouting.input.style.parser.stylehandler.line.DropInitialValueReadHandler
@@ -401,6 +400,7 @@ org.jfree.layouting.parser.compoundhandlers.font-emphasize=org.jfree.layouting.i
 #
 # Line Module
 org.jfree.layouting.parser.compoundhandlers.line-stacking=org.jfree.layouting.input.style.parser.stylehandler.line.LineStackingReadHandler
+org.jfree.layouting.parser.compoundhandlers.vertical-align=org.jfree.layouting.input.style.parser.stylehandler.line.VerticalAlignReadHandler
 
 #
 # Hyperlink Module
