--- a/liblayout/ant/build.properties
+++ b/liblayout/ant/build.properties
@@ -39,10 +39,11 @@ manifest-lib-prefix=lib/
 
 # Used by: module-misc-beanshell
 jcommon-jar-file=jcommon-1.0.5.jar
-libfonts-jar-file=libfonts-0.1.9.jar
+libfonts-jar-file=libfonts-0.2.0.jar
 flute-jar-file=flute-1.3-jfree-20060720.jar
 sac-jar-file=sac.jar
-libloader-jar-file=libloader-0.1.2.jar
+libloader-jar-file=libloader-0.1.3.jar
+junit-jar-file=junit.jar
 
 ##############################################################
 #
