Pagination working (unless you use tables!)

--- a/liblayout/source/org/jfree/layouting/layout.properties
+++ b/liblayout/source/org/jfree/layouting/layout.properties
@@ -77,6 +77,8 @@ org.jfree.layouting.functions.content.Date=org.jfree.layouting.layouter.style.fu
 org.jfree.layouting.functions.content.String=org.jfree.layouting.layouter.style.functions.content.StringValueFunction
 org.jfree.layouting.functions.content.Counter=org.jfree.layouting.layouter.style.functions.content.CounterValueFunction
 org.jfree.layouting.functions.content.Counters=org.jfree.layouting.layouter.style.functions.content.CountersValueFunction
+org.jfree.layouting.functions.content.Pending=org.jfree.layouting.layouter.style.functions.content.PendingFunction
+org.jfree.layouting.functions.content.Elements=org.jfree.layouting.layouter.style.functions.content.ElementsFunction
 
 
 #
